[fixes 4500254] Some CSS & HTML fixups to align with sequencescape

--- a/templates/app/stylesheets/screen.scss
+++ b/templates/app/stylesheets/screen.scss
@@ -57,6 +57,7 @@ div#quick_links {
   background: #31353d;
   color: #efefef;
   font-size: 12px;
+  line-height: 15px;
   border-top: 3px solid #055694;
   padding: 3px 10px 2px 10px;
 
@@ -121,10 +122,15 @@ div#header {
     }
   }
 
+  div#header_container {
+    padding-top: 1px;
+  }
+
   div#tab_bar {
     @include clearfix;
     background: #aad4f4;
     border-bottom: 1px solid #bbbbbb;
+    min-height: 21px;
 
     div#tabs {
       background: #aad4f4;
@@ -174,6 +180,14 @@ div#footer {
   a {
     @include link-colors(#3e87b3, #880000);
     text-decoration: none;
+  }
+
+  ul {
+    @include inline-list;
+
+    // This separates each 'li' with an "&middot;", which can't be used in 'content' so we use the unicode value.
+    li:after { content: ' \00B7 '; }
+    li:last-child:after { content: ''; }
   }
 }
 
